# PhaseMacherTest

./: Cargo.toml
.github/workflows/: build.yaml
desktop/: Cargo.toml  styles.css  test.csv
desktop/src/: app.rs  csv.rs  main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
libpicker/: Cargo.toml  readme.md
libpicker/src/: data.rs  data_analog.rs  data_digital.rs  lib.rs  number.rs
src-tauri/: tauri.conf.json
